--- a/CarVue/index.html
+++ b/CarVue/index.html
@@ -615,7 +615,7 @@
 
     </section>
 
-    <div class="credit"> created by <span>mr. web designer</span> | all rights reserved </div>
+    <div class="credit"> created by <span>Vansh Tyagi</span> | all rights reserved </div>
 
 </footer>
 
